# minetest

./: Doxyfile.in  minetest.conf.example
builtin/: falling.lua  init.lua  privileges.lua  settingtypes.txt
builtin/local_player_physics/: init.lua
builtin/mainmenu/: common.lua
doc/: lua_api.txt  player_physics_api.txt
po/cs/: minetest.po
src/: CMakeLists.txt  activeobject.h  activeobjectmgr.h  ban.cpp  camera.cpp  chat.cpp  chat.h  chat_interface.h  chatmessage.h  client.cpp  client.h  clientiface.cpp  clientiface.h  clientmap.cpp  clientmap.h  clientsimpleobject.h  collision.cpp  collision.h  config.h  constants.h  content_mapnode.cpp  content_nodemeta.cpp  content_sao.cpp  content_sao.h  convert_json.cpp  craftdef.cpp  craftdef.h  daynightratio.h  debug.cpp  debug.h  defaultsettings.cpp  emerge.cpp  emerge.h  environment.cpp  environment.h  event.h  exceptions.h  face_position_cache.cpp  face_position_cache.h  far_map.cpp  (+127 more)
src/bdebug/: cmem.h  debug.h
src/client/: tile.h
src/network/: clientopcodes.cpp  clientpackethandler.cpp  networkpacket.h  networkprotocol.h  serveropcodes.cpp  serverpackethandler.cpp  wms_priority.h
src/sailfish/: sailfish_inputprocess.cpp  sailfish_inputprocess.h  sailfish_inputwindow.h
src/sailfish/inputprocess/: CMakeLists.txt  main.qml  sailfish_inputprocess.cpp  sailfish_inputprocess.h
src/script/: CMakeLists.txt  scripting_client.cpp  scripting_client.h  scripting_game.h  scripting_mainmenu.cpp  scripting_mainmenu.h  scripting_player_physics.cpp  scripting_server.cpp  (+2 more)
util/: codestyle.sh  cpp_indent.py  uncrustify.cfg
(+107 files in other folders)
